removed most errors. Need to look at rest of them